@@ -1,3 +1,7 @@
+2005-12-08 Mikhail Khodjaiants
+	Bug 118809: Failure to evaluate stack frame.
+	* CThread.java
+
 2005-11-28 Mikhail Khodjaiants
 	Bug 118272: Invalid stack trace when stepping out of function.
 	* CThread.java
